# expense-audit-bot

./: .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_SCRIPT.txt  LICENSE  Makefile  README.md  SUBMISSION_WRITEUP.md  agents-cli-manifest.yaml  docker-compose.yml  performance_report.md  pyproject.toml  run.py
.github/workflows/: pytest.yml
Evaluation_Report/: concurrency_test_report.md  live_api_validation_report.md  load_test_report.md  long_conversation_test_report.md
app/: __init__.py  agent.py  batch_processor.py  company_policy.json  config.py  database.json  eval_set_1.evalset.json  fast_api_app.py  fraud_detector.py  fraud_policy.json  main.py  mcp_server.py  policy_engine.py  query_engine.py  report_generator.py  validation.py
app/agents/: __init__.py  extraction_agent.py  fraud_agent.py  hallucination_agent.py  planner_agent.py  policy_agent.py  query_agent.py  reasoning_agent.py  receipt_agent.py  reflection_agent.py  report_agent.py  security_agent.py  validation_agent.py
benchmark/: benchmark_manifest.json
config/: agents.yaml  policy.yaml
core/: __init__.py  exceptions.py
datasets/: adversarial.csv  arithmetic_accuracy.csv  compliance_detection.csv  confidence_score.csv  consistency.csv  currency_conversion.csv  date_validation.csv  document_parsing.csv  duplicate_detection.csv  edge_cases.csv  end_to_end.csv  enterprise_readiness.csv  entity_extraction.csv  error_handling.csv  exception_handling.csv  expense_extraction.csv  financial_calculations.csv  hallucination.csv  intent_classification.csv  json_output_validation.csv  language_understanding.csv  latency.csv  localization.csv  multi_turn_memory.csv  ocr_accuracy.csv  output_format.csv  overall_score.csv  performance.csv  policy_compliance.csv  prompt_injection.csv  reasoning.csv  receipt_validation.csv  regression.csv  reimbursement.csv  robustness.csv  scalability.csv  security.csv  stress_testing.csv  tool_calling.csv  validation.csv
docs/: InterviewGuide.md  architecture.md  before_vs_after_comparison.md  benchmark_coverage.md  benchmark_guide.md  benchmark_manifest_reference.md  benchmarking.md  dataset_summary.md  documentation_consistency_report.md  enterprise_readiness_methodology.md  error_analysis.md  evaluation_methodology.md  evaluation_quality_scorecard.md  experimental_results.md  final_audit_report.md  implementation_plan.md  limitations.md  methodology.md  reproducibility_guide.md  reproducibility_report.md  reviewer_guide.md  scoring_methodology.md  statistical_validation.md  traceability_matrix.md
domain/: __init__.py  audit.py  employee.py  expense.py  fraud.py  merchant.py  policy.py  receipt.py  report.py
evaluation/: __init__.py  benchmark_manifest.json  benchmark_runner.py  evaluation_metrics.py  evaluator.py  leaderboard.py  metrics.json  metrics.py  performance.py  performance_report.md  reports.py  results.json  run_explainability.py  run_fraud.py  run_memory.py  run_performance.py  run_policy.py  run_reasoning.py  scorecard.json  scorecard.py
framework/: __init__.py
reports/: benchmark_report.md  evaluation_report.md  executive_summary.md  fraud_report.md  gap_report.md  master_report.md  ocr_report.md  overall_scorecard.md  performance_report.md  policy_report.md  regression_report.md  security_report.md  stress_report.md
research/: __init__.py
runtime/: __init__.py  event_bus.py  policy_engine.py  result_collector.py  scheduler.py  workflow_engine.py
tests/: eval_set_1.evalset.json  test_realtime.py
use_cases/: __init__.py  answer_policy.py  audit_expense.py  detect_fraud.py  validate_receipt.py
(+597 files in other folders)
