[project]
name = "expense-audit-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "your@email.com"},
]

dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "mcp>=1.0.0,<2.0.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.29,<1.0",
    "a2a-sdk[http-server]~=0.3.22",
    "aiohttp>=3.13.4",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "google-cloud-aiplatform[evaluation,agent-engines]>=1.156.0",
    "protobuf>=6.31.1,<7.0.0",
    "psutil>=7.2.2",
    "matplotlib>=3.11.0",
    "prometheus-client>=0.25.0",
]
requires-python = ">=3.11,<3.14"


[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
    "pytest-cov>=7.1.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "core",
    "framework",
    "runtime",
    "use_cases",
    "evaluation",
    "scripts",
    "run.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006", "RUF059", "E402", "RUF013", "B905", "C401", "B026", "F841", "UP035", "F401", "W293", "W291", "RUF012", "RUF001", "RUF002", "RUF003", "B024", "B007", "UP042", "E701", "B904"] # ignore line too long, too complex, unused variables, import order, style, typing, and exception raises

[tool.ruff.lint.isort]
known-first-party = ["app", "frontend"]

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.venv
  | core
  | framework
  | runtime
  | use_cases
)/
'''

[tool.ty]
# ty is Astral's Rust-based type checker (same team as ruff/uv)
# See: https://docs.astral.sh/ty/

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
# Ignore common issues with third-party libraries and dynamic code patterns
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"
unknown-argument = "ignore"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/package-lock.json"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]

[tool.hatch.build.targets.wheel]
packages = ["app","frontend"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = [
    "attr-defined",
    "name-defined",
    "import-untyped",
    "arg-type",
    "var-annotated",
    "assignment",
    "override",
    "union-attr",
    "operator",
    "list-item",
    "dict-item",
    "return-value",
    "call-arg",
    "index",
    "method-assign",
    "func-returns-value",
    "type-var",
    "return",
    "misc",
    "call-overload"
]

[[tool.mypy.overrides]]
module = "app.api.v1.v1_routes"
ignore_errors = true





